# pytdb

./: .gitignore  .gitmodules  Benchy.ipynb  Benchy2.ipynb  CMakeLists.txt  Untitled.ipynb  build_manylinux_wheels.sh  main.cpp  pydb.py  pywrap.cc  release.sh  setup.py  table.cc  table.h  table_pb2.py  test.cc  test.sh
mock/sub,s=GOOG/: META.pb
mock/table_x/first/: META_.pb
proto/: CMakeLists.txt  table.proto
python/: pydb.py  pywrap.cc  setup.py  table_pb2.py
python/pydb/: __init__.py  pydb.py
python/pytdb/: pytdb.py
src/: CMakeLists.txt
